# digitheque

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/2023-12-03-205249_workspace/: down.sql  up.sql
migrations/2023-12-24-153436_add_workspace_types/: down.sql  up.sql
migrations/2024-02-06-222417_add_user_style_and_prelude/: down.sql  up.sql
migrations/2024-02-07-023322_workspace_one_to_many_relationship/: down.sql  up.sql
migrations/2024-02-18-155602_add_rss_tag_to_workspace/: down.sql  up.sql
scripts/: dither.py
src/: config.rs  db_conn.rs  lib.rs  main.rs  schema.rs  utils.rs
src/api/: assets.rs  feed.rs  mod.rs  user.rs  workspace.rs
src/handlers/: feed.rs  mod.rs  user.rs  workspace.rs
src/models/: feed.rs  mod.rs  session.rs  user.rs  workspace.rs  workspace_element.rs
src/routes/: assets.rs  feed.rs  mod.rs  user.rs  workspace.rs
src/views/: about.rs  auth.rs  common.rs  error.rs  feed.rs  mod.rs  profile.rs  user.rs  workspace.rs
static/: beboppp.html  demo.html  index.html  indexxx.html  manifest.json  robots.txt  sitemap.xml
static/styles/: fonts.css  style.css  styles.css  theme.css
