[package]
name = "digitheque"
version = "0.1.0"
edition = "2021"
description = "Markdown workspaces for everyone"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bebop-lang = "0.1.11"
chrono = {version = "0.4.31", features = ["serde"]}
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
html-to-string-macro = "0.2.5"
pwhash = "1.0.0"
sanitize_html = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warp = "0.3"
